[package]
name = "yamllint-rs"
version = "0.1.0"
edition = "2021"
authors = ["Avner Cohen <israbirding@gmail.com>"]
description = "A YAML linter written in Rust"
license = "MIT"
repository = "https://github.com/AvnerCohen/yamllint-rs"
readme = "README.md"
keywords = ["yaml", "lint", "linter", "yaml-lint"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "yamllint-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
regex = "1.10"
rayon = "1.8"
yaml-rust = "0.4"
atty = "0.2"
ignore = "0.4"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
